--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.16.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^6.10.1",
-    "nodemailer-express-handlebars": "^6.1.2"
+    "nodemailer-express-handlebars": "^6.1.2",
+    "shelljs": "^0.10.0"
   }
 }
